<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daily Tee Deals</string>

    <string name="menu_item_search">Search</string>
    <string name="menu_item_refresh">Refresh</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_share">Share</string>

    <string name="tab_today">Today</string>
    <string name="tab_week">This Week</string>
    <string name="tab_discover">Discover</string>

    <string name="title_activity_search">Search</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_product">ProductActivity</string>

    <string name="notification_daily_title">%1$s new tees added today</string>
    <string name="notification_daily_text">Including %1$s and %2$s</string>

    <!--<string name="notification_daily_title">%1$s new tees added today</string>-->
    <!--<string name="notification_daily_text">Including %1$s and %2$s</string>-->

    <string name="buy_button">Buy from %1$s - %2$s</string>

    <string name="detail_tutorial">Swipe left and right to quickly look through today\'s designs.</string>
    <string name="detail_by_artist">By %1$s</string>
    <string name="detail_more_artist">More from %1$s</string>
    <string name="detail_buy">Buy for %1$s</string>

    <string name="pref_notifications_enabled_title">Enable Notifications</string>
    <string name="pref_notifications_enabled_summary">Notify me when the daily tees list updates. You will only be alerted once per day.</string>

    <string name="pref_notifications_unobtrusive_title">Unobtrusive Mode</string>
    <string name="pref_notifications_nobtrusive_summary">Automatically disable notifications when the app hasn\'t been used in a while.</string>

    <string name="pref_currency_title">Currency</string>


</resources>
