<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="pref_currency_code"
        android:title="@string/pref_currency_title"
        android:entries="@array/currencyList"
        android:entryValues="@array/currencyValues"
        android:defaultValue="USD" />

    <PreferenceCategory
        android:title="Notifications">

        <SwitchPreference
            android:key="pref_notifications_enabled"
            android:title="@string/pref_notifications_enabled_title"
            android:summary="@string/pref_notifications_enabled_summary"
            android:defaultValue="true" />

        <SwitchPreference
            android:key="pref_notifications_unobtrusive"
            android:title="@string/pref_notifications_unobtrusive_title"
            android:summary="@string/pref_notifications_nobtrusive_summary"
            android:defaultValue="true"
            android:dependency="pref_notifications_enabled" />

    </PreferenceCategory>

</PreferenceScreen>